--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Unity/ShaderKitchenProject/ProjectSettings/*
 Unity/ShaderKitchenProject/Assets/SublimeSocketAsset/*
 
 Unity/ShaderKitchenProject/Assets/VSCode/*
+
+Unity/ShaderKitchenProject/.vscode/launch.json
