もうちょいでHTML部分完成

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ Unity/ShaderKitchenProject/obj/Debug/Assembly-CSharp.dll.mdb
 
 Unity/ShaderKitchenProject/UnidonWeb/*
 
+
+Unity/ShaderKitchenProject/obj/Debug/Assembly-CSharp.dll
