--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ Unity/ShaderKitchenProject/UnidonWeb/*
 
 
 Unity/ShaderKitchenProject/obj/Debug/Assembly-CSharp.dll
+
+Unity/ShaderKitchenProject/obj/Debug/Assembly-CSharp.dll
