--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,4 @@ Unity/ShaderKitchenProject/obj/Debug/Assembly-CSharp.dll.mdb
 Unity/ShaderKitchenProject/UnidonWeb/*
 
 
-Unity/ShaderKitchenProject/obj/Debug/Assembly-CSharp.dll
-
-Unity/ShaderKitchenProject/obj/Debug/Assembly-CSharp.dll
+Unity/ShaderKitchenProject/obj/*
