record位置をちょっと調整

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ Unity/ShaderKitchenProject/UnidonWeb/*
 
 
 Unity/ShaderKitchenProject/obj/*
+
+Unity/ShaderKitchenProject/Assets/UnidonContents/Page_1/Resources/ScreenTemp/*
+
